// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render  default message 1`] = `
<div
  className="Message Message_type_alert Message_view_default"
>
  <span
    className="Message-Body"
  >
    message
  </span>
</div>
`;

exports[`Should render  default message with title 1`] = `
<div
  className="Message Message_type_alert Message_view_default"
>
  <span
    className="Message-Body"
  >
    <Component>
      title
    </Component>
  </span>
</div>
`;

exports[`Should render  error message 1`] = `
<div
  className="Message Message_type_error Message_view_default"
>
  <span
    className="Message-Body"
  >
    message
  </span>
</div>
`;

exports[`Should render  error message with Error 1`] = `
<div
  className="Message Message_type_error Message_view_default Block-Element"
>
  <span
    className="Message-Body"
  >
    <Error
      data={
        Object {
          "message": Object {
            "en": "Текст en message",
            "ru": "Текст ru message",
          },
          "title": Object {
            "en": "Текст en title",
            "ru": "Текст ru title",
          },
        }
      }
    />
  </span>
</div>
`;

exports[`Should render  error message with className 1`] = `
<div
  className="Message Message_type_error Message_view_default Block-Element"
>
  <span
    className="Message-Body"
  >
    message
  </span>
</div>
`;

exports[`Should render  error message with description 1`] = `
<div
  className="Message Message_type_error Message_view_default Block-Element"
>
  <span
    className="Message-Body"
  >
    <Error
      data={
        Object {
          "description": "Текст description",
          "title": Object {
            "en": "Текст en title",
            "ru": "Текст ru title",
          },
        }
      }
      type="dispenser"
    />
  </span>
</div>
`;

exports[`Should render  error message with new view 1`] = `
<div
  className="Message Message_type_error Message_view_new"
>
  <WithBemMod(Icon)[type:close]
    className="Message-Icon Message-Icon_type_error"
    glyph="info"
  />
  <span
    className="Message-Body"
  >
    message
  </span>
</div>
`;

exports[`Should render  error message with with no description 1`] = `
<div
  className="Message Message_type_error Message_view_default Block-Element"
>
  <span
    className="Message-Body"
  >
    <Error
      data={
        Object {
          "description": "",
          "title": Object {
            "en": "Текст en title",
            "ru": "Текст ru title",
          },
        }
      }
      type="dispenser"
    />
  </span>
</div>
`;

exports[`Should render  info message with new view 1`] = `
<div
  className="Message Message_type_info Message_view_new"
>
  <WithBemMod(Icon)[type:close]
    className="Message-Icon Message-Icon_type_info"
    glyph="info"
  />
  <span
    className="Message-Body"
  >
    message
  </span>
</div>
`;

exports[`Should render  message with Title 1`] = `
<div
  className="Message Message_type_error Message_view_default Block-Element"
>
  <span
    className="Message-Body"
  >
    <Component>
      Title
    </Component>
  </span>
</div>
`;

exports[`Should render  success message with new view 1`] = `
<div
  className="Message Message_type_success Message_view_new"
>
  <WithBemMod(Icon)[type:close]
    className="Message-Icon Message-Icon_type_success"
    glyph="info"
  />
  <span
    className="Message-Body"
  >
    message
  </span>
</div>
`;
